[project]
name = "uop-server-zmq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Samantha Atkins", email = "samantha@sjasoft.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
uop-server-zmq = "uop_server_zmq:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
